--- a/package.json
+++ b/package.json
@@ -12,14 +12,22 @@
   "license": "ISC",
   "dependencies": {
     "bookshelf": "^1.2.0",
+    "cloudinary": "^1.37.0",
+    "connect-flash": "^0.1.1",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "csurf": "^1.11.0",
     "db-migrate": "^0.11.13",
     "db-migrate-mysql": "^2.2.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "forms": "^1.3.2",
     "hbs": "^4.2.0",
     "knex": "^2.4.2",
     "mysql": "^2.18.1",
+    "object-keys": "^1.1.1",
+    "session-file-store": "^1.5.0",
     "wax-on": "^1.2.2",
     "widgets": "^0.3.4"
   }
