--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "express-session": "^1.17.3",
     "forms": "^1.3.2",
     "hbs": "^4.2.0",
-    "knex": "^2.4.2",
+    "knex": "0.21.0",
     "mysql": "^2.18.1",
     "object-keys": "^1.1.1",
     "session-file-store": "^1.5.0",
