--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mysql": "^2.18.1",
     "object-keys": "^1.1.1",
     "session-file-store": "^1.5.0",
+    "stripe": "^12.6.0",
     "wax-on": "^1.2.2",
     "widgets": "^0.3.4"
   }
