--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.17.3",
     "forms": "^1.3.2",
     "hbs": "^4.2.0",
+    "jsonwebtoken": "^9.0.0",
     "knex": "0.21.0",
     "mysql": "^2.18.1",
     "object-keys": "^1.1.1",
